Add missing step ID for output setting and format echo command in workflow

--- a/.github/workflows/use-summary.yml
+++ b/.github/workflows/use-summary.yml
@@ -15,4 +15,5 @@ jobs:
           numbers: '[10, 20, 30, 40]'
 
       - name: Print action output
-        run: echo "Summary output: ${{ steps.summary.outputs.summary }}"
+        run: |
+          echo "Summary output: ${{ steps.summary.outputs.summary }}"
