Fix default input value and move summary text formatting to a separate script

--- a/.github/workflows/reusable-2.yml
+++ b/.github/workflows/reusable-2.yml
@@ -7,7 +7,7 @@ on:
         description: 'JSON array of numbers as a string'
         type: string
         required: true
-        default: '[1,2,3]''
+        default: '[1,2,3]'
 
 jobs:
   summarize:
@@ -29,16 +29,5 @@ jobs:
         shell: bash
         run: |
           printf '%s' "${{ steps.call-summary.outputs.summary }}" > summary.json || true
-          python3 - <<'PY' > summary_text.txt
-import json
-try:
-    s = json.load(open('summary.json'))
-except Exception:
-    print('Invalid summary JSON')
-    raise
-if not isinstance(s, dict) or s.get('count', 0) == 0:
-    print('No numbers provided')
-else:
-    print(f"count={s['count']}, sum={s['sum']}, avg={s['avg']:.2f}, min={s['min']}, max={s['max']}")
-PY
+          python3 ./ci/print_summary_text.py > summary_text.txt
           echo "summary_text=$(cat summary_text.txt)" >> $GITHUB_OUTPUT
