--- a/.github/workflows/reusable-2.yml
+++ b/.github/workflows/reusable-2.yml
@@ -20,7 +20,7 @@ jobs:
   summarize:
     runs-on: ubuntu-latest
     outputs:
-      summary: ${{ steps.format.outputs.summary }}
+      summary: ${{ steps.call_summary.outputs.summary }}
       summary_text: ${{ steps.format.outputs.summary_text }}
     steps:
       - uses: actions/checkout@v4
@@ -36,7 +36,5 @@ jobs:
         shell: bash
         run: |
           printf '%s' '${{ steps.call-summary.outputs.summary }}' > summary.json || true
-          echo "summary=$(cat summary.json)" >> $GITHUB_OUTPUT
-
           python3 ./ci/print_summary_text.py > summary_text.txt
           echo "summary_text=$(cat summary_text.txt)" >> $GITHUB_OUTPUT
