--- a/.github/workflows/concurency.yml
+++ b/.github/workflows/concurency.yml
@@ -9,7 +9,7 @@ concurrency:
 
 jobs:
   upload-tree:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
@@ -31,7 +31,7 @@ jobs:
         run: sleep 10  
 
   add-summary:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: upload-tree
     steps:
       - name: Download tree output
